--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ djangorestframework-simplejwt = "^5.2.2"
 drf-yasg = "^1.21.7"
 stripe = "^5.5.0"
 requests = "^2.31.0"
+celery = "^5.3.1"
 
 
 [build-system]
