--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ drf-yasg = "^1.21.7"
 stripe = "^5.5.0"
 requests = "^2.31.0"
 celery = "^5.3.1"
+redis = "^4.6.0"
+django-celery-beat = "^2.5.0"
+flower = "^2.0.0"
 
 
 [build-system]
