--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 Deploy to stage:
     stage: deploy
     script:
-        - cp $ENV_STAGE /.env
+        - cp $ENV_STAGE /var/www/mysite/.env
     only:
         - docker_branch
     tags:
