--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 Deploy to stage:
     stage: deploy
     script:
-        - cp $ENV .env
+        - cp ENV .env
     only:
         - docker_branch
     tags:
