--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ Deploy to stage:
     stage: deploy
     script:
         - cp $ENV_STAGE .env
+        - bash deploy.sh
     only:
         - develop
     tags:
