--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 Deploy to stage:
     stage: deploy
     script:
-        - cp -r $ENV_STAGE .env
+        - cp $ENV_STAGE .env
         - bash deploy.sh
     only:
         - develop
